# rag-exercise

./: .env.sample  .gitignore  README.md  pyproject.toml
docs/: WORKSHOP.md
notebooks/: tutorial.ipynb
src/: config.py  main.py
src/core/: __init__.py  engine.py
src/database/: __init__.py  vector_store.py
src/embeddings/: __init__.py  models.py
src/evaluation/: __init__.py  metrics.py
src/generation/: __init__.py  chain.py
src/retrieval/: __init__.py  reranking.py
